# TodoDjango

./: pyproject.toml
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_rename_compilite_task_complete.py
base/templates/base/: login.html  register.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
todoList/: settings.py  urls.py
