[tool.poetry]
name = "djan"
version = "0.1.0"
description = ""
authors = ["Kane-Dan <n3t.fox2@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
docker = "^7.1.0"
redis = "^5.2.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
